fix:build and cors error